# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import productsRouter from "./products";
 import assistantRouter from "./assistant";
+import movementsRouter from "./movements";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(productsRouter);
 router.use(assistantRouter);
+router.use(movementsRouter);
 
 export default router;
